crates/datarig-tui/tests/snapshots/flows_plan__plan_boxes_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03                                                                            │"
"│    ▸ analytics                       ││                                                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Boxes ────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                          │"
"│                                      ││ …  Summary   Icicle   Flame   Timeline   Row flow   Treemap  [Boxes]  Raw      execution 82.4 ms · planning 0.824 ms │"
"│                                      ││              ╭──────────────────────╮                                                                                │"
"│                                      ││              │Seq Scan on zz_custom…│                                                                                │"
"│                                      ││              │0.753 ms · <1%        │                                                                                │"
"│                                      ││              ╰──────────────────────╯                                                                                │"
"│                                      ││                          │                                                                                           │"
"│                                      ││             ╭────────────┴────────────╮                                                                              │"
"│                                      ││ ╭─ InitPlan 3 ─────────╮  ╭─ SubPlan 1 ──────────╮                                                                   │"
"│                                      ││ │Result                │  │Aggregate             │                                                                   │"
"│                                      ││ │0.002 ms · <1%        │  │8.500 ms · 10%        │                                                                   │"
"│                                      ││ ╰──────────────────────╯  ╰──────────────────────╯                                                                   │"
"│                                      ││             │                         │                                                                              │"
"│                                      ││             │                         │                                                                              │"
"│                                      ││ ╭─ InitPlan 2 ─────────╮  ╭──────────────────────╮                                                                   │"
"│                                      ││ │Limit                 │  │Bitmap Heap Scan on z…│                                                                   │"
"│                                      ││ │0.002 ms · <1%        │  │64.2 ms · 77% hot     │                                                                   │"
"│                                      ││ ╰──────────────────────╯  ╰──────────────────────╯                                                                   │"
"│                                      ││             │                         │                                                                              │"
"│                                      ││             │                         │                                                                              │"
"│                                      ││ ╭──────────────────────╮  ╭──────────────────────╮                                                                   │"
"│                                      ││ │Index Only Scan using…│  │Bitmap Index Scan on …│                                                                   │"
"│                                      ││ │0.038 ms · <1%        │  │7.000 ms · 8%         │                                                                   │"
"│                                      ││ Seq Scan on zz_customers c · self 0.753 ms (<1%) · total 80.5 ms                                                     │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                  │ Enter detail · v views · h fold · y copy · Esc back · : commands · F1 help · Space more EN "
