crates/datarig-tui/tests/snapshots/flows_plan__plan_boxes_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;                                  │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Boxes ────────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                          │"
"│                      ││ … [Boxes] …    execution 82.4 ms · planning 0.824 ms │"
"│                      ││              ╭──────────────────────╮                │"
"│                      ││              │Seq Scan on zz_custom…│                │"
"│                      ││              │0.753 ms · <1%        │                │"
"│                      ││              ╰──────────────────────╯                │"
"│                      ││                          │                           │"
"│                      ││             ╭────────────┴────────────╮              │"
"│                      ││ ╭─ InitPlan 3 ─────────╮  ╭─ SubPlan 1 ──────────╮   │"
"│                      ││ │Result                │  │Aggregate             │   │"
"│                      ││ Seq Scan on zz_customers c · self 0.753 ms (<1%) · … │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
