crates/datarig-tui/tests/snapshots/flows_plan__plan_detail_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1▎SELECT * FROM t;                                                                                                  │"
"│    ▸ analytics                       ││                                                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Tree ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                          │"
"│                                      ││ [Tree]  Raw                                                                    execution 82.4 ms · planning 0.824 ms │"
"│                                      ││ Node                   est rows  rows ×loops       self share         │ Aggregate                                    │"
"│                                      ││ ▾ Seq Scan on zz_cust…      250          250   0.753 ms ▏          <1%│ SubPlan 1                                    │"
"│                                      ││ ├─▾ InitPlan 3: Result        1            1   0.002 ms ▏          <1%│ Time      self 8.500 ms (10%) · total 79.8   │"
"│                                      ││ │ └─▾ InitPlan 2: Lim…        1            1   0.002 ms ▏          <1%│           ms                                 │"
"│                                      ││ │   └── Index Only Sc…     1000            1   0.038 ms ▏          <1%│ Per loop  first row 0.319 ms · last row      │"
"│                                      ││ └─▾ SubPlan 1: Aggreg…        1       1 ×250   8.500 ms ▉          10%│           0.319 ms · 250 loops               │"
"│                                      ││   └─▾ Bitmap Heap… hot      200     200 ×250    64.2 ms ███████    77%│ Cost      539.64..539.65 (estimated) · own   │"
"│                                      ││     └── Bitmap Index …      200     200 ×250   7.000 ms ▊           8%│           0.5                                │"
"│                                      ││                                                                       │ Rows      estimated 1 · actual 1 per loop ×  │"
"│                                      ││                                                                       │           250 loops = 250                    │"
"│                                      ││                                                                       │ Buffers   hit 50.3k · read 157 · cache hit   │"
"│                                      ││                                                                       │           99%                                │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │ Buffers: shared hit=50343 read=157           │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"│                                      ││                                                                       │                                              │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                  │ Enter detail · v views · h fold · y copy · Esc back · : commands · F1 help · Space more EN "
