crates/datarig-tui/tests/snapshots/flows_plan__plan_flame_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03            │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Flame ────────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                          │"
"│                      ││ … [Flame] …    execution 86.6 ms · planning 0.785 ms │"
"│                      ││ Sort · self 0.033 ms (<1%) · total 86.5 ms           │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││             ▏                                        │"
"│                      ││ ▏Seq Scan…▕ ▏                                        │"
"│                      ││ ▏Hash Join 28%            ▕                          │"
"│                      ││ ▏HashAggregate 47%                                 ▕ │"
"│                      ││ ▏Sort <1%                                          ▕ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
