crates/datarig-tui/tests/snapshots/flows_plan__plan_icicle_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;                                  │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Icicle ───────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                          │"
"│                      ││  Tree   Summary  [Icicle]  Flame   Treemap   Raw     │"
"│                      ││ ▏Sort <1%                                          ▕ │"
"│                      ││ ▏HashAggregate 47%                                 ▕ │"
"│                      ││ ▏Hash Join 28%            ▕                          │"
"│                      ││ ▏Seq Scan…▕ ▏                                        │"
"│                      ││             ▏                                        │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││ Sort · self 0.033 ms (<1%) · total 86.5 ms           │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
